--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ img {
 </style>
 </head>
 <body>
-<h1>Mysql数据库教程完整版</h1>
+<h1>MySQL-Tutorial-for-Beginners</h1>
 <p>1.查询所有数据库</p>
 <pre><code>show databases;
 </code></pre>
